Supervise hazardous SQLite tests in bounded child JVMs